tests/ui/range_unknown_enum.stderr
error: marigold parse error: range(NonExistent): 'NonExistent' is not a declared enum in this program
 --> ui/range_unknown_enum.rs:9:13
  |
9 |     let _ = marigold::m!(range(NonExistent).return);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `marigold::m` (in Nightly builds, run with -Z macro-backtrace for more info)
